Avoid horizontal bleeding on small screens
See https://saucelabs.com/beta/tests/4c2a2182878f45a8bb61712f832e8097

--- a/css/main.css
+++ b/css/main.css
@@ -236,4 +236,9 @@ a.ui.card {
 	#masthead {
 		padding: 1em 0;
 	}
+
+	#masthead h1 {
+		font-size: 200%;
+		text-align: center;
+	}
 }
